--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,26 @@
 .App {
-  text-align: center;
+    user-select: none;
 }
 
+
+.App-header {
+  display: flex;
+  font-size: calc(10px + 2vmin);
+  align-items: center;
+  width: 100vw;
+  height: 20vmin;
+  line-height: 20vmin;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 20vmin;
+  width: 20vmin;
   pointer-events: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+header p {
+    color: #000;
+    display: inline-block;
 }
 
 @keyframes App-logo-spin {
